# video_to_stt

./: .env.example  .gitignore  README.md  README_UI.md  audio_extractor.py  create_dataset.py  main.py  pyproject.toml  requirements.txt  subtitle_generator.py  subtitle_generator_assemblyai.py  video_downloader.py  video_downloader_ytdlp.py  video_frame_analyzer.py  youtube_analyzer.py  youtube_analyzer_ytdlp.py  youtube_to_text.py
.claude/: CLAUDE.md  settings.local.json
backend/: app.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  DatasetCreator.tsx
